# SRTLA_OBS

./: .gitignore  CMakeLists.txt  README.md  buildspec.json
.github/scripts/: build-ubuntu  package-ubuntu
.github/workflows/: build-project.yaml  push.yaml
cloudOBS_Docker/: default_scenes.json  docker-compose.yml  pyle_default.json
cmake/common/: buildspec_common.cmake
cmake/macos/: buildspec.cmake
cmake/windows/: buildspec.cmake
src/: httplib.h  multistream.cpp  multistream.hpp  plugin-main.c  srtla-source.c  srtla-stats-filter.c  srtla-ui.cpp  srtla-ui.hpp  srtla-web.cpp  vertical-manager.cpp  vertical-manager.hpp  vertical-render.cpp  vertical-render.hpp  vertical-ui.cpp  vertical-ui.hpp
src/srtla/: common.c  srtla_rec.c
src/web/: index.html
